// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SmallText renders correctly 1`] = `
.c0 {
  font-size: 0.75rem;
}

<span
  className="c0"
>
  Test
</span>
`;

exports[`Text renders correctly 1`] = `
.c0 {
  font-size: 1rem;
}

<span
  className="c0"
>
  Test
</span>
`;
